--- a/RayTracerTest/Base.lproj/Main.storyboard
+++ b/RayTracerTest/Base.lproj/Main.storyboard
@@ -838,9 +838,20 @@
                                     <action selector="multiThreadedTest:" target="XfG-lQ-9wD" id="pea-LF-PD4"/>
                                 </connections>
                             </button>
+                            <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="doB-Sp-tLQ">
+                                <rect key="frame" x="20" y="174" width="96" height="22"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="M1p-tA-RPV">
+                                    <numberFormatter key="formatter" formatterBehavior="default10_4" numberStyle="decimal" minimumIntegerDigits="1" maximumIntegerDigits="2000000000" maximumFractionDigits="3" id="Mzp-bl-Nqc"/>
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
                         </subviews>
                     </view>
                     <connections>
+                        <outlet property="TextField" destination="doB-Sp-tLQ" id="yc1-qe-jTI"/>
                         <outlet property="progressLabel" destination="PNH-l3-9UF" id="ADS-Kx-kzk"/>
                     </connections>
                 </viewController>
